--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_theme">ThemeActivity</string>
     <string name="message">Pressed 1</string>
+    <string name="hint">Подсказки нет!</string>
 </resources>
