--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Тренажер-справочник по Истории Беларуси</string>
+    <string name="app_name2">Тренажер-справочник\nпо Истории Беларуси</string>
     <string name="app_name_short">Тренажер-справочник</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_theme">ThemeActivity</string>
