--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">Тренажер-справочник по Истории Беларуси</string>
-    <string name="app_name2">Тренажер-справочник\nпо истории Беларуси</string>
-    <string name="app_name_short">Тренажер-справочник</string>
+    <string name="app_name">Тренажер по Истории Беларуси</string>
+    <string name="app_name2">Тренажер\nпо истории Беларуси</string>
+    <string name="app_name_short">Тренажер</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_theme">ThemeActivity</string>
     <string name="message">Pressed 1</string>
